--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 body: JSON.stringify({ selectedItem })
             })
             .then(response => {
-                window.location.href = '/slideshow';
+<!--                window.location.href = 'slideshow';-->
             })
             .catch(error => {
                 console.error('Error:', error);
