--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
    <div class="banner">
        <img src="/static/images/headphone_cat.png" alt="Cat">
    </div>
+   <p class="hint">hint: include the artist name for more accurate results.</p>
    <div class="form-container">
        <form class="form" action="/get_query" method = "POST">
            <input id="search-bar" class="input" name="search" placeholder="search for a song..."/>
@@ -21,6 +22,12 @@
 
     </div>
     <div class="results-container">
+        <p class="instructions"></p>
+        <script>
+        if ('song-0' in {{ data | safe }}) {
+            document.getElementsByClassName("instructions")[0].innerHTML = "Select your song: "
+        }
+        </script>
        <ul class="results-list" id="list">
            <li id="song-1">{{ data['song-0']  }}</li>
            <li id="song-2">{{ data['song-1'] }}</li>
